Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125241

fromIccProfile fails with "failed minimal tag size sanity"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.5.7, 6.7.2, 6.8.0 FF
    • 6.7
    • GUI: Painting
    • None
    • f5cafb6f1 (dev), a85c3939d (6.7), dabf8b687 (tqtc/lts-6.5)

      With the attached ICC profile, the following code:

      QFile file("/path/to/cali2-BenQ_SW271_24-02-28.icc");
      if (!file.open(QIODevice::ReadOnly)) return;
      QColorSpace colorSpace = QColorSpace::fromIccProfile(file.readAll());
      file.close();
      qDebug() << colorSpace.isValid(); 

      Reports an invalid color space and writes the warning:

      qt.gui.icc: fromIccProfile: failed minimal tag size sanity

      The ICC profile contains a tag with the signature "DDPS" whose element size is 9. The corresponding data has type signature "text", which if I understand the ICC specification correctly, would be valid because it just needs the standard 8 byte intro that all tag data has, plus at least one for the text's null terminator. It seems that the tag size sanity check is being overly aggressive.

        For Gerrit Dashboard: QTBUG-125241
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            jdpurcell J.D. Purcell
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes