Make minimal tag size more accepting

Accept tags between 8 and 12 bytes long, and move the check for 12
bytes to where it is needed.

Fixes: QTBUG-125241
Change-Id: I1a46852a9ab60e7c63f8d74de1809d731912ab5b
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit f5cafb6f1ceeb907cc99baccf97d2da6299e5809)
(cherry picked from commit a85c3939df798ed96a538b8df92abbd0d321a5f5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>